# valere

./: .gitignore  Cargo.toml  README.md  baseline.txt  debug_topics.json  results_log.tsv  sys_hypothesis.txt  topics.json  user_hypothesis_template.txt  valere.toml.example
src/: error.rs  main.rs  util.rs
src/config/: cli.rs  file.rs  mod.rs
src/experiment/: mod.rs  result.rs
src/workflow/: evaluator.rs  mod.rs  proposer.rs
tests/: config_validation.rs
